--- a/practica_4/conestilo.css
+++ b/practica_4/conestilo.css
@@ -3,12 +3,15 @@
 body {
     background-color: rgb(132, 141, 155);
     color: white;
+    text-transform: uppercase;
+    font-family: sans-serif;
+    font-weight: bolder;
 }
 
 .caja1 {
     height: 450px;
-    width: 250px;
-    background-image: linear-gradient( to right, hsl(15,94%,59%), hsl(9,94%,58%));
+    width: 300px;
+    background-image: linear-gradient( to right, hsl(15,94%,59%), red);
     border-radius: 10px;
 }
 
@@ -22,7 +25,7 @@ body {
 
 .dolar {
     display: inline-block;
-    margin-left: 60px;
+    margin-left: 80px;
 }
 
 .price {
@@ -30,11 +33,30 @@ body {
     font-size: 100px;
     padding: 0px;
     margin: 0px;
+    text-shadow: 0px,20px,10px,rgba(255,255,255, 0.3);
+
 }
 
+.price {
+text-shadow: 10px,20px,1px,rgba(255,255,255,0.3);}
+
 .plan {
-    padding-left: 30px;
+    text-align: center;
+    font-weight: bold;
+    display:
+}
+
+.table {
     text-align: center;
 }
 
-
+.btn {
+    border-top-left-radius: 12px;
+    border-bottom-right-radius: 8px;
+    background-color: white;
+    color:black;
+    padding: 8px;
+    cursor: pointer;
+    margin-top: 100px;
+    margin-left: 170px;
+}
