--- a/practica_4/conestilo.css
+++ b/practica_4/conestilo.css
@@ -4,16 +4,39 @@ body {
     background-color: rgb(132, 141, 155);
     color: white;
     text-transform: uppercase;
-    font-family: sans-serif;
+    font-family:serif;
     font-weight: bolder;
 }
 
 .caja1 {
-    height: 450px;
-    width: 300px;
+    height: 400px;
+    width: 280px;
+    background-image: linear-gradient( to right,hsl(235,53%,67%),hsl(177,60%,72%));
+    border-radius: 10px;
+    display: inline-block;
+}
+
+.caja2 {
+    height: 400px;
+    width: 280px;
     background-image: linear-gradient( to right, hsl(15,94%,59%), red);
     border-radius: 10px;
+    display: inline-block;
+    margin-top: 100px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
+
+.caja3 {
+    height: 400px;
+    width: 280px;
+    background-image: linear-gradient( to right, hsl(89,53%,53%), hsl(169,59%,44%)
+    );
+    border-radius: 10px;
+    display: inline-block;
+    margin-top: 100px;
+}
+
 
 .title {
     text-align: center;
@@ -21,11 +44,14 @@ body {
     padding-top: 30px;
     margin-bottom: 10px;
     padding-top: 30px;
+    text-shadow: 1px,2px,black;
 }
 
 .dolar {
     display: inline-block;
     margin-left: 80px;
+    font-size: 24px;
+
 }
 
 .price {
@@ -33,17 +59,27 @@ body {
     font-size: 100px;
     padding: 0px;
     margin: 0px;
-    text-shadow: 0px,20px,10px,rgba(255,255,255, 0.3);
-
+    position: relative;
+    z-index:1;
 }
 
-.price {
-text-shadow: 10px,20px,1px,rgba(255,255,255,0.3);}
+.price__Z {
+    position: absolute;
+    z-index: 0;
+    opacity: 10%;
+    font-size: 80px;
+    margin-bottom: 100px;
+    transition: width 2s, height 2s, transform 2s;
+}
+
+
+
 
 .plan {
     text-align: center;
     font-weight: bold;
-    display:
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .table {
@@ -57,6 +93,35 @@ text-shadow: 10px,20px,1px,rgba(255,255,255,0.3);}
     color:black;
     padding: 8px;
     cursor: pointer;
-    margin-top: 100px;
-    margin-left: 170px;
+    margin-top: 25px;
+    margin-left: 150px;
 }
+
+
+
+
+
+
+/* Animaciones: */
+
+.caja1:hover , .caja2:hover , .caja3:hover {
+    transform: scale(1.05);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+}
+
+.caja1:hover .btn , .caja2:hover .btn , .caja3:hover .btn {
+    margin-left: 0px;
+    border-top-left-radius: 0px;
+    transition: 0.5s;
+    
+}
+
+.caja1:hover .price__Z {
+  transition-property: width;
+  transition-duration: 2s;
+  transition-timing-function: linear;
+  transition-delay: 1s;
+}
+
+
